--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -202,7 +202,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="Charity tax write off laws"
                 android:textStyle="bold"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/liability_link_one"
@@ -214,7 +214,7 @@
                 android:autoLink="all"
                 android:clickable="true"
                 android:text="A number of federal laws encourage food donation in the United States by providing liability protection to donors or tax incentives."
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/liability_header_two"
@@ -225,7 +225,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="A summary of donation laws"
                 android:textStyle="bold"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/liability_link_two"
@@ -237,7 +237,7 @@
                 android:autoLink="all"
                 android:clickable="true"
                 android:text="Internal Revenue Code 170(e)(3) provides enhanced tax deductions to businesses to encourage donations of fit and wholesome food to qualified nonprofit organizations serving the poor and needy.  Qualified business taxpayers can deduct the cost to produce the food and half the difference between the cost and full fair market value of the donated food."
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/liability_header_three"
@@ -249,7 +249,7 @@
                 android:linksClickable="true"
                 android:text="PDF outlining donation laws."
                 android:textStyle="bold"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/liability_link_three"
@@ -261,7 +261,7 @@
                 android:autoLink="all"
                 android:clickable="true"
                 android:text="The U.S. Federal Food Donation Act of 2008 specifies procurement contract language encouraging Federal agencies and contractors of Federal agencies to donate excess wholesome food to eligible nonprofit organizations to feed food-insecure people in the United States."
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/contact_us"
@@ -283,7 +283,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="Phone"
                 android:textStyle="bold"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/contact_phone"
@@ -292,7 +292,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="       (123)456-7890"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/email_header"
@@ -303,7 +303,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="Email"
                 android:textStyle="bold"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/contact_email"
@@ -312,7 +312,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="       green_pig_bistro@gmail.com"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
